<resources>
    <string name="app_name">New Hope Hotel</string>
    <string name="FirstNameText">First Name :</string>
    <string name="FirstNameTextField">Enter First Name</string>
    <string name="SecondNameTextField">Enter Second Name</string>
    <string name="LastNameText">Last Name :</string>
    <string name="submitButton">Register</string>
    <string name="List_of_Users_text">List Of Registered Users</string>
    <string name="PasswordText">Password:</string>
    <string name="PasswordTextFiels">Enter Password</string>
    <string name="UserNameTextView">User Name:</string>
    <string name="UsernameTextField">Enter User Name</string>
    <string name="backButton">Back</string>
    <string name="Login_text">Login</string>
    <string name="Login_button">Login</string>
    <string name="signupText">Sign Up!</string>
    <string name="register">Register</string>
    <string name="userDetails">User Details</string>
    <string name="welcome">Welcome</string>
    <string name="check_in_check_out"><![CDATA[Check-In & Check Out]]></string>
    <string name="housekeeping">Housekeeping</string>
    <string name="room_service">Room Service</string>
    <string name="customer_feedback">Customer Feedback</string>
    <string name="View_Room_Service_List">View Room Service List</string>
    <string name="View_Morning_Call_List">View Morning Call List</string>
    <string name="Room_Service_List">Room Service List</string>
    <string name="Morning_Call_List">Morning Call List</string>
    <string name="room_cleaning_time">Room Cleaning Time</string>
    <string name="_8am">8am</string>
    <string name="_12pm">12pm</string>
    <string name="_8pm">8pm</string>
    <string name="_4pm">4pm</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="name">Name</string>
    <string name="i_c">I/C</string>
    <string name="contact_no">Contact No.</string>
    <string name="room_id">Room ID</string>
    <string name="room_type">Room Type</string>
    <string name="status">Status</string>
    <string name="card_no">Card No.</string>
    <string name="time">Time</string>
    <string name="select_time">Select Time</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="morning_call">Morning Call</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="cleaning_list">Cleaning List</string>
    <string name="assign_work">Assign Work</string>
    <string name="cico_empty_warning">Customer name cannot be empty</string>
    <string name="unsaved_changes_warning_title">Discard changes?</string>
    <string name="unsaved_changes_warning_message">Are you sure you want to discard the changes?</string>
    <string name="yes">Yes</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="reserved">Reserved</string>
    <string name="undo">UNDO</string>
    <string name="record_is_deleted">One record is deleted</string>
    <string name="morning_call_date">Date</string>
    <string name="morning_call_time">Time</string>
    <string name="morning_call_title">Morning Call</string>
    <string name="morning_call_snack">One Morning Call Deleted</string>
    <string name="room_service_title">Room Service</string>
    <string name="room_service_snack">One Room Service Deleted</string>
    <string name="request">request</string>
    <string name="error_no_request">Request Field Cannot Be Empty</string>
    <string name="please_select_customer">Please Select a Customer</string>
    //RoomID String Array
    <string-array name="roomid_array">
        <item>R001</item>
        <item>R002</item>
        <item>R003</item>
        <item>R004</item>
        <item>R005</item>
        <item>R006</item>
        <item>R007</item>
        <item>R008</item>
        <item>R009</item>
        <item>R010</item>
    </string-array>
    //RoomType String Array
    <string-array name="roomtype_array">
        <item>Standard</item>
        <item>Deluxe</item>
        <item>Luxury</item>
    </string-array>
    //RoomStatus String Array
    <string-array name="roomstatus_array">
        <item>Reserved</item>
        <item>Available</item>
        <item>Unavailable</item>
    </string-array>
    //MorningCall String Array
    <string-array name="morningcall_array">
        <item>None</item>
        <item>8 AM</item>
        <item>9 AM</item>
        <item>10 AM</item>
        <item>11 AM</item>
    </string-array>
    <string name="save_record">Save record</string>
    <string name="check_in_time">Check In Time</string>
    <string name="check_in_date">Check In Date</string>
    <string name="add_room_service">Add Room Service</string>
    <string name="total_no">Total No</string>
    <string name="checkout_date">Checkout Date</string>
    <string name="checkout_time">Checkout Time</string>
    <string name="customer_information">Customer Information</string>
    <string name="optional">Optional</string>
    <string name="eight_am">8 AM</string>
    <string name="nine_am">9 AM</string>
    <string name="ten_am">10 AM</string>
    <string name="eleven_am">11 AM</string>
    <string name="save">Save</string>
    <string name="contactNoError">eg: 012-123 1234</string>
    <string name="icError">eg: 123456-12-1234</string>
    <string name="add_a_new_record">Add a new record</string>
    <string name="contact_toast_error">Wrong Contact No</string>
    <string name="ic_toast_error">Wrong IC No</string>
    <string name="mark_as_done">MARK AS DONE</string>
    <string name="assign">Assign</string>
    <string name="request_underline"><u>Request</u></string>
    <string name="all">All</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>