<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".checkInCheckOut.CheckInFragment">

    <data>

        <variable
            name="myCheckInViewModel"
            type="com.example.newhopehotel.checkInCheckOut.CheckInViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow_green_crayola"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/check_in"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@color/green_pigment">


            <TextView
                android:id="@+id/nameCust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/nameInput"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/white"
                android:fontFamily="@font/roboto"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="24dp"
                android:text="@string/i_c"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameCust" />

            <EditText
                android:id="@+id/icInput"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:background="@color/white"
                android:fontFamily="@font/roboto"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameInput" />

            <TextView
                android:id="@+id/contactNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="24dp"
                android:text="@string/contact_no"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic" />

            <EditText
                android:id="@+id/contactNoInput"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:background="@color/white"
                android:fontFamily="@font/roboto"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icInput" />

            <TextView
                android:id="@+id/roomIDText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="32dp"
                android:text="@string/room_id"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contactNo" />

            <Spinner
                android:id="@+id/roomIDSpinner"
                style="@style/SpinnerTheme"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:dropDownWidth="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contactNoInput" />

            <TextView
                android:id="@+id/roomTypeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="24dp"
                android:text="@string/room_type"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/roomIDText" />

            <Spinner
                android:id="@+id/roomTypeSpinner"
                style="@style/SpinnerTheme"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:dropDownWidth="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/roomIDSpinner" />

            <TextView
                android:id="@+id/roomStatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="24dp"
                android:text="@string/status"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/roomTypeText" />

            <Spinner
                android:id="@+id/roomStatusSpinner"
                style="@style/SpinnerTheme"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:dropDownWidth="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/roomTypeSpinner" />

            <TextView
                android:id="@+id/roomCardNoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="32dp"
                android:text="@string/card_no"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/roomStatusText" />

            <Spinner
                android:id="@+id/roomCardNoSpinner"
                style="@style/SpinnerTheme"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:dropDownWidth="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/roomStatusSpinner" />

            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="24dp"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/roomCardNoText" />

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:text="00:00"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/timeText"
                app:layout_constraintTop_toBottomOf="@+id/roomCardNoSpinner" />

            <Button
                android:id="@+id/selectTimeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/select_time"
                app:layout_constraintStart_toEndOf="@+id/timeTextView"
                app:layout_constraintTop_toBottomOf="@+id/roomCardNoSpinner" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>