<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".checkInCheckOut.CheckInCheckOutListFragment">

    <data>

        <variable
            name="myCheckInCheckOutListViewModel"
            type="com.example.newhopehotel.checkInCheckOut.CheckInCheckOutListViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/yellow_green_crayola">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/check_in_check_out"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <Button
            android:id="@+id/checkInBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/check_in"
            android:onClick="@{()->myCheckInCheckOutListViewModel.checkInButton()}" />

        <Button
            android:id="@+id/checkOutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/check_out"
            android:onClick="@{()->myCheckInCheckOutListViewModel.checkOutButton()}" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="721dp"
            android:background="@color/yellow_green_crayola"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/small_padding"
                android:text="List of CICO Details"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="32dp"
                tools:layout_conversion_absoluteWidth="379dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/customersRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:layout_conversion_absoluteHeight="537dp"
                tools:layout_conversion_absoluteWidth="402dp"
                tools:layout_editor_absoluteX="5dp"
                tools:layout_editor_absoluteY="53dp">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
    </LinearLayout>

</layout>