<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".checkInCheckOut.CheckOutFragment">

    <data>

        <variable
            name="myCheckOutViewModel"
            type="com.example.newhopehotel.checkInCheckOut.CheckOutViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/yellow_green_crayola">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/check_out"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="400dp"
            android:background="@color/green_pigment">

            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="16dp"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:text="00:00"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/timeText"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/selectTimeButton"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_confirm_button"
                android:drawableStart="@drawable/ic_baseline_access_time_24"
                android:padding="1.5dp"
                app:layout_constraintStart_toEndOf="@+id/timeTextView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="32dp"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeText" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="24dp"
                android:text="00/00/0000"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/dateText"
                app:layout_constraintTop_toBottomOf="@+id/timeTextView" />

            <Button
                android:id="@+id/selectDateButton"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_confirm_button"
                android:drawableStart="@drawable/ic_baseline_date_range_24"
                android:padding="1.5dp"
                app:layout_constraintStart_toEndOf="@+id/dateTextView"
                app:layout_constraintTop_toBottomOf="@+id/selectTimeButton" />

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/custom_confirm_button"
                android:letterSpacing=".1"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="75dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/custom_cancel_button"
                android:letterSpacing=".1"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</layout>